Fix hard to read text in new color schemes, especially dark mode (#431)
* update mini tabs text color to prevent tabs text from becoming invisible in dark mode
* fix color issues with new color schemes, especially dark mode
* rename card to well after copy pasting from 5.x
* theme tabs and collapsibles
* increase color contrast dark theme

---------

--- a/scss/vendor-extensions/bootstrap-3.scss
+++ b/scss/vendor-extensions/bootstrap-3.scss
@@ -298,6 +298,9 @@ blockquote footer, blockquote small, blockquote .small {
 .dxpr-theme-boxed-container .nav-tabs >li.active a {
   border-bottom-color: white;
 }
+.az-tabs .nav-tabs > li.active > a[role="tab"] {
+  background-color: #ffffff;
+}
 
 .region-content nav.tabs:after {
   content:" ";
@@ -318,8 +321,8 @@ blockquote footer, blockquote small, blockquote .small {
       padding: 0;
       border: none;
       a {
-        background-color: white;
-        color: #333;
+        background-color: $header-color;
+        color: $header-text-color;
         padding: 8px;
         text-transform: uppercase;
         font-size: 12px;
@@ -328,7 +331,7 @@ blockquote footer, blockquote small, blockquote .small {
         pointer-events: auto;
         &:hover,
         &:focus {
-          color: #777;
+          text-decoration: underline;
         }
       }
       &.active {
